# azure-iot-sdk-c

./: thirdpartynotice.txt
iothub_client/: CMakeLists.txt
iothub_client/inc/: iothub_client_core.h  iothub_client_core_common.h  iothub_client_core_ll.h  iothub_client_options.h  iothub_device_client.h  iothub_device_client_ll.h  iothub_module_client.h  iothub_module_client_ll.h  iothub_twin.h
iothub_client/inc/internal/: iothub_transport_ll_private.h  iothubtransport_amqp_common.h  iothubtransport_mqtt_common.h
iothub_client/samples/: CMakeLists.txt  readme.md
iothub_client/samples/iothub_client_device_cbor_c2d_telemetry_twin_sample/: CMakeLists.txt  iothub_client_device_cbor_c2d_telemetry_twin_sample.c  readme.md
iothub_client/samples/iothub_client_device_cbor_sample/: CMakeLists.txt  iothub_client_device_cbor_sample.c  readme.md
iothub_client/samples/iothub_client_device_twin_and_methods_sample/: iothub_client_device_twin_and_methods_sample.c  iothub_client_device_twin_and_methods_sampleFix.c
iothub_client/src/: iothub_client_core.c  iothub_client_core_ll.c  iothub_device_client.c  iothub_device_client_ll.c  iothub_module_client.c  iothub_module_client_ll.c  iothub_transport_ll_private.c  iothub_twin.c  iothubtransport_mqtt_common.c  iothubtransportamqp.c  iothubtransportamqp_websockets.c  iothubtransporthttp.c  iothubtransportmqtt.c  iothubtransportmqtt_websockets.c
iothub_client/tests/common_dt_e2e/: iothubclient_common_dt_e2e.c  iothubclient_common_dt_e2e.h
iothub_client/tests/iothubclient_mqtt_dt_e2e/: iothubclient_mqtt_dt_e2e.c
